# Resume-Optimizer

./: README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: __init__.py  job_descriptions.py  resumes.py
backend/app/core/: config.py
backend/app/core/prompts/: analyzer.py  generator.py
backend/app/db/: database.py  models.py
backend/app/schemas/: job_description.py  resume.py
backend/app/services/: llm_service.py
