[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend for Resume Optimizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "redis>=5.1.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "openai>=1.50.0",
    "anthropic>=0.36.0",
    "alembic>=1.13.3",
    "aiosqlite>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
